Fix navbar height on small screen sizes

--- a/themes/hugo-conference/static/css/main.css
+++ b/themes/hugo-conference/static/css/main.css
@@ -772,6 +772,9 @@ h2.tagline {
     display: block;
     text-align: center;
   }
+  nav {
+    height: 5rem;
+  }
 }
 
 @media only screen and (max-width: 480px) {
